cfn_scripts/1_vpc_template.yaml
AWSTemplateFormatVersion: 2010-09-09
Description: Template to make VPC with private and public subnet
Parameters: {}
Resources:
  VPC:
    Type: 'AWS::EC2::VPC'
    Properties:
      CidrBlock: 10.20.0.0/16
      Tags:
        - Key: Application
          Value: !Ref 'AWS::StackName'
        - Key: Network
          Value: Public
    Metadata:
      'AWS::CloudFormation::Designer':
        id: c31e3310-7461-44bd-8e2f-96739c19598b
  VPCSecurityGroup:
    Type: 'AWS::EC2::SecurityGroup'
    Properties:
      GroupDescription: Enable SSH access via port 22
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: '22'
          ToPort: '22'
          CidrIp: 0.0.0.0/0
      VpcId: !Ref VPC
    Metadata:
      'AWS::CloudFormation::Designer':
        id: 559f75d9-0b34-4a3e-b399-d85b2f789268
  PublicSubnet:
    Type: 'AWS::EC2::Subnet'
    Properties:
      AvailabilityZone: us-west-2a
      VpcId: !Ref VPC
      CidrBlock: 10.20.10.0/24
      Tags:
        - Key: Application
          Value: !Ref 'AWS::StackName'
        - Key: Network
          Value: Public
    Metadata:
      'AWS::CloudFormation::Designer':
        id: bae4a1d8-e31c-4325-a5cb-84a40e4331c7
  InternetGateway:
    Type: 'AWS::EC2::InternetGateway'
    Properties:
      Tags:
        - Key: Application
          Value: !Ref 'AWS::StackName'
        - Key: Network
          Value: Public
    Metadata:
      'AWS::CloudFormation::Designer':
        id: f25cbdcd-4658-4ccc-9fcd-2402a2674d73
  AttachGateway:
    Type: 'AWS::EC2::VPCGatewayAttachment'
    Properties:
      VpcId: !Ref VPC
      InternetGatewayId: !Ref InternetGateway
    Metadata:
      'AWS::CloudFormation::Designer':
        id: d10615de-0be2-49cf-b3b1-757accf58816
  PublicRouteTable:
    Type: 'AWS::EC2::RouteTable'
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Application
          Value: !Ref 'AWS::StackName'
        - Key: Network
          Value: Public
    Metadata:
      'AWS::CloudFormation::Designer':
        id: 7a12409f-3dbc-4496-a22a-6bc43377e3d3
  PublicRoute:
    Type: 'AWS::EC2::Route'
    Properties:
      RouteTableId: !Ref PublicRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway
    Metadata:
      'AWS::CloudFormation::Designer':
        id: 47a70bef-c800-4306-8bad-e446bd9594d4
  PublicSubnetRouteTableAssociation:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      SubnetId: !Ref PublicSubnet
      RouteTableId: !Ref PublicRouteTable
    Metadata:
      'AWS::CloudFormation::Designer':
        id: ccd14d58-7f81-432c-85f6-1dd94cf0bf9d
  PublicNetworkAcl:
    Type: 'AWS::EC2::NetworkAcl'
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Application
          Value: !Ref 'AWS::StackName'
        - Key: Network
          Value: Public
    Metadata:
      'AWS::CloudFormation::Designer':
        id: eee989f8-c479-4418-9cb0-d0f78f4408d2
  InboundHTTPPublicNetworkAclEntry:
    Type: 'AWS::EC2::NetworkAclEntry'
    Properties:
      NetworkAclId: !Ref PublicNetworkAcl
      RuleNumber: '100'
      Protocol: '6'
      RuleAction: allow
      Egress: 'false'
      CidrBlock: 0.0.0.0/0
      PortRange:
        From: '80'
        To: '80'
    Metadata:
      'AWS::CloudFormation::Designer':
        id: 2881a66b-4348-4d21-b2f6-c911612fcc0c
  InboundDynamicPortsPublicNetworkAclEntry:
    Type: 'AWS::EC2::NetworkAclEntry'
    Properties:
      NetworkAclId: !Ref PublicNetworkAcl
      RuleNumber: '101'
      Protocol: '6'
      RuleAction: allow
      Egress: 'false'
      CidrBlock: 0.0.0.0/0
      PortRange:
        From: '1024'
        To: '65535'
    Metadata:
      'AWS::CloudFormation::Designer':
        id: 7f0cd573-d883-446c-b894-887726d213fe
  OutboundHTTPPublicNetworkAclEntry:
    Type: 'AWS::EC2::NetworkAclEntry'
    Properties:
      NetworkAclId: !Ref PublicNetworkAcl
      RuleNumber: '100'
      Protocol: '6'
      RuleAction: allow
      Egress: 'true'
      CidrBlock: 0.0.0.0/0
      PortRange:
        From: '80'
        To: '80'
    Metadata:
      'AWS::CloudFormation::Designer':
        id: 9b3394b3-ce00-4263-81c2-d1019f3d3d33
  OutBoundDynamicPortPublicNetworkAclEntry:
    Type: 'AWS::EC2::NetworkAclEntry'
    Properties:
      NetworkAclId: !Ref PublicNetworkAcl
      RuleNumber: '101'
      Protocol: '6'
      RuleAction: allow
      Egress: 'true'
      CidrBlock: 0.0.0.0/0
      PortRange:
        From: '1024'
        To: '65535'
    Metadata:
      'AWS::CloudFormation::Designer':
        id: f1c9371f-51ba-44ee-a266-53d1d60e359c
  PublicSubnetNetworkAclAssociation:
    Type: 'AWS::EC2::SubnetNetworkAclAssociation'
    Properties:
      SubnetId: !Ref PublicSubnet
      NetworkAclId: !Ref PublicNetworkAcl
    Metadata:
      'AWS::CloudFormation::Designer':
        id: 296dff0f-a2bc-491d-be12-59675010e611
  PrivateSubnet:
    Type: 'AWS::EC2::Subnet'
    Properties:
      AvailabilityZone: us-west-2a
      VpcId: !Ref VPC
      CidrBlock: 10.20.30.0/24
      Tags:
        - Key: Application
          Value: !Ref 'AWS::StackName'
        - Key: Network
          Value: Private
    Metadata:
      'AWS::CloudFormation::Designer':
        id: 47978213-ad4b-4b62-87fd-511318f8cf0d
  PrivateRouteTable:
    Type: 'AWS::EC2::RouteTable'
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Application
          Value: !Ref 'AWS::StackName'
        - Key: Network
          Value: Private
    Metadata:
      'AWS::CloudFormation::Designer':
        id: 0a380069-2d5a-4070-a252-36862e8519e5
  PrivateSubnetRouteTableAssociation:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      SubnetId: !Ref PrivateSubnet
      RouteTableId: !Ref PrivateRouteTable
    Metadata:
      'AWS::CloudFormation::Designer':
        id: 591aa8cc-a678-46c7-9732-64c2148a8cbf
  PrivateNetworkAcl:
    Type: 'AWS::EC2::NetworkAcl'
    Properties:
      VpcId: !Ref VPC
      Tags:
        - Key: Application
          Value: !Ref 'AWS::StackName'
        - Key: Network
          Value: Private
    Metadata:
      'AWS::CloudFormation::Designer':
        id: 4e496ee8-d723-4d5b-a50d-11b262ae81b9
  InboundPrivateNetworkAclEntry:
    Type: 'AWS::EC2::NetworkAclEntry'
    Properties:
      NetworkAclId: !Ref PrivateNetworkAcl
      RuleNumber: '100'
      Protocol: '6'
      RuleAction: allow
      Egress: 'false'
      CidrBlock: 0.0.0.0/0
      PortRange:
        From: '0'
        To: '65535'
    Metadata:
      'AWS::CloudFormation::Designer':
        id: 07eace84-8bb1-4ce9-b731-960491b08599
  OutBoundPrivateNetworkAclEntry:
    Type: 'AWS::EC2::NetworkAclEntry'
    Properties:
      NetworkAclId: !Ref PrivateNetworkAcl
      RuleNumber: '100'
      Protocol: '6'
      RuleAction: allow
      Egress: 'true'
      CidrBlock: 0.0.0.0/0
      PortRange:
        From: '0'
        To: '65535'
    Metadata:
      'AWS::CloudFormation::Designer':
        id: 513cdc73-f09d-4ccf-82d5-e67d481a9795
  PrivateSubnetNetworkAclAssociation:
    Type: 'AWS::EC2::SubnetNetworkAclAssociation'
    Properties:
      SubnetId: !Ref PrivateSubnet
      NetworkAclId: !Ref PrivateNetworkAcl
    Metadata:
      'AWS::CloudFormation::Designer':
        id: 7ab555cd-a7e4-4cf1-8a7b-6c22f5f36508
  Outputs:
    VPC-ID:
      Value: !Ref VPC
    Metadata:
      'AWS::CloudFormation::Designer':
        id: 52d722d8-fb83-459a-b07b-b2f1a34ff594
Metadata:
  'AWS::CloudFormation::Designer':
    52d722d8-fb83-459a-b07b-b2f1a34ff594:
      size:
        width: 60
        height: 60
      position:
        x: 990
        'y': 90
      z: 1
      embeds: []
    f25cbdcd-4658-4ccc-9fcd-2402a2674d73:
      size:
        width: 60
        height: 60
      position:
        x: 990
        'y': 210
      z: 1
      embeds: []
    c31e3310-7461-44bd-8e2f-96739c19598b:
      size:
        width: 870
        height: 870
      position:
        x: -390
        'y': -90
      z: 1
      embeds:
        - 4e496ee8-d723-4d5b-a50d-11b262ae81b9
        - 0a380069-2d5a-4070-a252-36862e8519e5
        - 47978213-ad4b-4b62-87fd-511318f8cf0d
        - eee989f8-c479-4418-9cb0-d0f78f4408d2
        - 7a12409f-3dbc-4496-a22a-6bc43377e3d3
        - bae4a1d8-e31c-4325-a5cb-84a40e4331c7
        - 559f75d9-0b34-4a3e-b399-d85b2f789268
    4e496ee8-d723-4d5b-a50d-11b262ae81b9:
      size:
        width: 330
        height: 240
      position:
        x: -360
        'y': 360
      z: 2
      parent: c31e3310-7461-44bd-8e2f-96739c19598b
      embeds:
        - 513cdc73-f09d-4ccf-82d5-e67d481a9795
        - 07eace84-8bb1-4ce9-b731-960491b08599
      iscontainedinside:
        - c31e3310-7461-44bd-8e2f-96739c19598b
    513cdc73-f09d-4ccf-82d5-e67d481a9795:
      size:
        width: 60
        height: 60
      position:
        x: -330
        'y': 420
      z: 3
      parent: 4e496ee8-d723-4d5b-a50d-11b262ae81b9
      embeds: []
      iscontainedinside:
        - 4e496ee8-d723-4d5b-a50d-11b262ae81b9
    07eace84-8bb1-4ce9-b731-960491b08599:
      size:
        width: 60
        height: 60
      position:
        x: -210
        'y': 420
      z: 3
      parent: 4e496ee8-d723-4d5b-a50d-11b262ae81b9
      embeds: []
      iscontainedinside:
        - 4e496ee8-d723-4d5b-a50d-11b262ae81b9
    0a380069-2d5a-4070-a252-36862e8519e5:
      size:
        width: 150
        height: 150
      position:
        x: 30
        'y': 480
      z: 2
      parent: c31e3310-7461-44bd-8e2f-96739c19598b
      embeds: []
      iscontainedinside:
        - c31e3310-7461-44bd-8e2f-96739c19598b
    47978213-ad4b-4b62-87fd-511318f8cf0d:
      size:
        width: 150
        height: 150
      position:
        x: 240
        'y': 270
      z: 2
      parent: c31e3310-7461-44bd-8e2f-96739c19598b
      embeds: []
      iscontainedinside:
        - c31e3310-7461-44bd-8e2f-96739c19598b
    7ab555cd-a7e4-4cf1-8a7b-6c22f5f36508:
      source:
        id: 4e496ee8-d723-4d5b-a50d-11b262ae81b9
      target:
        id: 47978213-ad4b-4b62-87fd-511318f8cf0d
    591aa8cc-a678-46c7-9732-64c2148a8cbf:
      source:
        id: 0a380069-2d5a-4070-a252-36862e8519e5
      target:
        id: 47978213-ad4b-4b62-87fd-511318f8cf0d
    eee989f8-c479-4418-9cb0-d0f78f4408d2:
      size:
        width: 330
        height: 330
      position:
        x: -360
        'y': -30
      z: 2
      parent: c31e3310-7461-44bd-8e2f-96739c19598b
      embeds:
        - f1c9371f-51ba-44ee-a266-53d1d60e359c
        - 9b3394b3-ce00-4263-81c2-d1019f3d3d33
        - 7f0cd573-d883-446c-b894-887726d213fe
        - 2881a66b-4348-4d21-b2f6-c911612fcc0c
      iscontainedinside:
        - c31e3310-7461-44bd-8e2f-96739c19598b
    f1c9371f-51ba-44ee-a266-53d1d60e359c:
      size:
        width: 60
        height: 60
      position:
        x: -330
        'y': 30
      z: 3
      parent: eee989f8-c479-4418-9cb0-d0f78f4408d2
      embeds: []
      iscontainedinside:
        - eee989f8-c479-4418-9cb0-d0f78f4408d2
    9b3394b3-ce00-4263-81c2-d1019f3d3d33:
      size:
        width: 60
        height: 60
      position:
        x: -210
        'y': 30
      z: 3
      parent: eee989f8-c479-4418-9cb0-d0f78f4408d2
      embeds: []
      iscontainedinside:
        - eee989f8-c479-4418-9cb0-d0f78f4408d2
    7f0cd573-d883-446c-b894-887726d213fe:
      size:
        width: 60
        height: 60
      position:
        x: -330
        'y': 150
      z: 3
      parent: eee989f8-c479-4418-9cb0-d0f78f4408d2
      embeds: []
      iscontainedinside:
        - eee989f8-c479-4418-9cb0-d0f78f4408d2
    2881a66b-4348-4d21-b2f6-c911612fcc0c:
      size:
        width: 60
        height: 60
      position:
        x: -210
        'y': 150
      z: 3
      parent: eee989f8-c479-4418-9cb0-d0f78f4408d2
      embeds: []
      iscontainedinside:
        - eee989f8-c479-4418-9cb0-d0f78f4408d2
    7a12409f-3dbc-4496-a22a-6bc43377e3d3:
      size:
        width: 240
        height: 240
      position:
        x: 30
        'y': -30
      z: 2
      parent: c31e3310-7461-44bd-8e2f-96739c19598b
      embeds:
        - 47a70bef-c800-4306-8bad-e446bd9594d4
      iscontainedinside:
        - c31e3310-7461-44bd-8e2f-96739c19598b
    47a70bef-c800-4306-8bad-e446bd9594d4:
      size:
        width: 60
        height: 60
      position:
        x: 60
        'y': 30
      z: 3
      parent: 7a12409f-3dbc-4496-a22a-6bc43377e3d3
      embeds: []
      isassociatedwith:
        - f25cbdcd-4658-4ccc-9fcd-2402a2674d73
      iscontainedinside:
        - 7a12409f-3dbc-4496-a22a-6bc43377e3d3
    d10615de-0be2-49cf-b3b1-757accf58816:
      source:
        id: c31e3310-7461-44bd-8e2f-96739c19598b
      target:
        id: f25cbdcd-4658-4ccc-9fcd-2402a2674d73
    bae4a1d8-e31c-4325-a5cb-84a40e4331c7:
      size:
        width: 150
        height: 150
      position:
        x: 30
        'y': 270
      z: 2
      parent: c31e3310-7461-44bd-8e2f-96739c19598b
      embeds: []
      iscontainedinside:
        - c31e3310-7461-44bd-8e2f-96739c19598b
    296dff0f-a2bc-491d-be12-59675010e611:
      source:
        id: eee989f8-c479-4418-9cb0-d0f78f4408d2
      target:
        id: bae4a1d8-e31c-4325-a5cb-84a40e4331c7
    ccd14d58-7f81-432c-85f6-1dd94cf0bf9d:
      source:
        id: 7a12409f-3dbc-4496-a22a-6bc43377e3d3
      target:
        id: bae4a1d8-e31c-4325-a5cb-84a40e4331c7
    559f75d9-0b34-4a3e-b399-d85b2f789268:
      size:
        width: 60
        height: 60
      position:
        x: 330
        'y': -30
      z: 2
      parent: c31e3310-7461-44bd-8e2f-96739c19598b
      embeds: []
      iscontainedinside:
        - c31e3310-7461-44bd-8e2f-96739c19598b
